--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,12 +18,12 @@ jobs:
         uses: docker/login-action@v3.4.0
         with:
           username: barath2005
-          password: ${{ secrets.barath2005 }}
+          password: ${{ secrets.DOCKER_PASSWD }}
           ecr: false
           logout: true
 
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag docker/docker-demo:1.0
+        run: docker build . --file Dockerfile --tag project/project-demo:1.0
 
       - name: Push the Docker image
-        run: docker push docker.io/docker/docker-demo:1.0
+        run: docker push docker.io/project/project-demo:1.0
