--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,7 @@ jobs:
         uses: docker/login-action@v3.4.0
         with:
           username: barath2005
-          password: ${{ secrets.barath2005 }}
+          password: ${{ secrets.DOCKER_PASSWD }}
           ecr: false
           logout: true
 
